# koco_msgs

./: CMakeLists.txt  README.md  package.xml
action/: Move.action  MoveJ.action  MoveL.action  MoveSequence.action
msg/: DigitalIO.msg  DigitalIOArray.msg  KocoPose.msg  KocoTool.msg
srv/: PlanAndStore.srv  SetOutputs.srv  SetRobotSpeed.srv
